exports[`test with no cards works 1`] = `
<ol
  className="card-list" />
`;

exports[`test with two face-down cards works 1`] = `
<ol
  className="card-list">
  <li>
    <div
      className="card">
      <div
        className="logo" />
    </div>
  </li>
  <li>
    <div
      className="card">
      <div
        className="logo" />
    </div>
  </li>
</ol>
`;

exports[`test with two face-up cards works 1`] = `
<ol
  className="card-list">
  <li>
    <div
      className="card-face-up-h">
      <div
        className="top-left-rank">
        2
      </div>
      <div
        className="suit">
        &hearts;
      </div>
      <div
        className="bottom-right-rank">
        2
      </div>
    </div>
  </li>
  <li>
    <div
      className="card-face-up-d">
      <div
        className="top-left-rank">
        3
      </div>
      <div
        className="suit">
        &diams;
      </div>
      <div
        className="bottom-right-rank">
        3
      </div>
    </div>
  </li>
</ol>
`;
